# SDL-Snake-Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Food.h  Game.h  GameSettings.h  IDrawable.h  Screen.h  Snake.h  sdl_utility.h
src/: Food.cpp  Game.cpp  GameSettings.cpp  Screen.cpp  Snake.cpp  main.cpp
